# stack_calc

./: .gitmodules  Actions.cpp  Actions.h  CMakeCache.txt  CMakeLists.txt  ConcreteActionCreator.cpp  ConcreteActionCreator.h  Makefile  README.md  StackCalc.cpp  StackCalc.h  cmake_install.cmake  main.cpp  stack_calc  stack_calc.cbp  stack_calc_test  test.cpp  tst.txt
